--- a/src/app/app.html
+++ b/src/app/app.html
@@ -5,6 +5,9 @@
     </ion-toolbar>
   </ion-header> -->
   <ion-content id="side-menu21" style="background-color:#387ef5;">
+
+  <div class="spacer" style="height:5%;" id="sampleComponent-spacer3"></div>
+
     <ion-list no-lines id="side-menu21-list1" style="background-color:#387ef5;" no-shadow>
       <ion-item color="primary" menuClose="" on-click="goToHome()" id="side-menu21-list-item1">
         <ion-icon name="ios-home" item-left></ion-icon>
@@ -15,21 +18,21 @@
         <strong>Meal offering</strong>
       </ion-item>
       <ion-item  color="primary" menuClose="" on-click="goToOurFacility()" id="side-menu21-list-item3">
-        <ion-icon name="ios-wifi" item-left></ion-icon>
+        <ion-icon name="md-albums" item-left></ion-icon>
         <strong>Our Facility</strong>
       </ion-item>
-      <ion-item  color="primary" menuClose="" on-click="goToOurFacility()" id="side-menu21-list-item4">
-        <ion-icon name="ios-wifi" item-left></ion-icon>
-        <strong>Our Facility</strong>
+      <ion-item  color="primary" menuClose="" on-click="goFlight()" id="side-menu21-list-item4">
+        <ion-icon name="ios-plane-outline" item-left></ion-icon>
+        <strong>Flight</strong>
       </ion-item>
-      <ion-item  color="primary" menuClose="" on-click="goToSampleComponent()" id="side-menu21-list-item5">
+ <!--      <ion-item  color="primary" menuClose="" on-click="goToSampleComponent()" id="side-menu21-list-item5">
         <ion-icon name="ionic" item-left></ion-icon>
         <strong>#sample component</strong>
-      </ion-item>
-      <ion-item  color="primary" menuClose="" on-click="goToFeedback()" id="side-menu21-list-item6">
+      </ion-item> -->
+<!--       <ion-item  color="primary" menuClose="" on-click="goToFeedback()" id="side-menu21-list-item6">
         <ion-icon name="ios-chatbubbles" item-left></ion-icon>
         <strong>Leave Feedback</strong>
-      </ion-item>
+      </ion-item> -->
     </ion-list>
   </ion-content>
 </ion-menu>
