--- a/src/pages/facility-detail-and-order/facility-detail-and-order.scss
+++ b/src/pages/facility-detail-and-order/facility-detail-and-order.scss
@@ -4,8 +4,8 @@ page-facility-detail-and-order {
 .scroll-content{
 	margin: 0px !important;
 }
-.back-button-icon.icon, 
-.back-button-text.back-button-text-ios {
-   color: #000000;
-}
+// .back-button-icon.icon, 
+// .back-button-text.back-button-text-ios {
+//    color: #000000;
+// }
 }
